Completando endpoints solicitados
